# sector_analyzer

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  draft.md  render.yaml
.claude/: settings.json  settings.local.json
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: analyst_agent.py  data_agent.py  graph.py  news_agent.py  state.py
backend/app/api/: deps.py
backend/app/api/routes/: analysis.py  auth.py  health.py  market.py  news.py
backend/app/mcp/: news_server.py
backend/app/models/: analysis.py  market.py  news.py
backend/app/scheduler/: jobs.py
backend/app/services/: eodhd.py  market_calendar.py  newsapi.py  reliefweb.py  rss_fallback.py  sector_stocks.py  supabase.py  yahoo_finance.py
backend/supabase/migrations/: 001_initial_schema.sql  002_add_momentum_1y.sql  003_add_week_52_range.sql  004_add_news_summaries_and_crises.sql  005_allowed_emails.sql
backend/tests/: conftest.py  test_config.py  test_integration.py  test_models.py
backend/tests/agents/: test_analyst_agent.py  test_data_agent.py  test_graph.py  test_news_agent.py  test_state.py
backend/tests/api/: test_analysis.py  test_health.py  test_market.py  test_news.py
backend/tests/scheduler/: test_jobs.py
backend/tests/services/: test_eodhd.py  test_newsapi.py  test_rss_fallback.py  test_supabase.py  test_supabase_queries.py
docs/: installation-guide.md  sector-rotation-strategy.md  supabase-auth-setup.md
frontend/: package-lock.json  package.json  vite.config.ts  (+1 more)
(+60 files in other folders)
